--- a/hcli.cabal
+++ b/hcli.cabal
@@ -17,8 +17,8 @@ executable hcli
     default-language: Haskell2010
     build-depends:
         base ^>=4.14.1.0,
-        Cabal ==3.6.2.0,
-        cabal-install-parsers ^>=0.4.5,
+        Cabal,
+        cabal-install-parsers,
         shelly ^>=1.10.0,
         filepath,
         cli ^>=0.2.0,
@@ -39,4 +39,4 @@ test-suite hcli-test
         cli,
         regex-compat,
         text,
-        hspec
+        -- hspec
