--- a/hcli.cabal
+++ b/hcli.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.6
 name:               hcli
 version:            0.1.0.0
 maintainer:         dmitrii.sk@gmail.com
@@ -17,7 +17,7 @@ executable hcli
     default-language: Haskell2010
     build-depends:
         base,
-        Cabal,
+        Cabal == 3.8.1.0,
         cabal-install-parsers,
         shelly,
         filepath,
